<resources>
    <string name="app_name">Trybnb</string>
    <string name="bottom_menu_reservations">Reservas</string>
    <string name="bottom_menu_create_reservations">Criar Reserva</string>
    <string name="bottom_menu_profile">Perfil</string>
    <string name="app_logo">Logo</string>
    <string name="input_login_error_message">O campo Login é obrigatório</string>
    <string name="input_password_error_message">O campo Password é obrigatório</string>
    <string name="success_login">Login feito com sucesso!</string>
    <string name="failed_login">Insira um Login e Senha válido!</string>
    <string name="guest_name">Nome do Hóspede</string>
    <string name="item_checkin_text">Checkin</string>
    <string name="item_checkout_text">Checkout</string>
    <string name="item_additional_needs_text">Informações Adicionais</string>
    <string name="coin_symbol">R$</string>
    <string name="create_reservation">Criar Reserva</string>
    <string name="guest_firstname_text">Nome do hóspede</string>
    <string name="guest_lastname_text">Sobrenome do hóspede</string>
    <string name="additional_needs_text">Necessidades adicionais</string>
    <string name="total_price_text">Preço total</string>
    <string name="deposit_paid_text">Depósito Pago</string>
</resources>